crates/deadline-cli/tests/cli/snapshots/cli__job_download_input__job_download_input_include_no_match.snap
---
source: crates/deadline-cli/tests/cli/job_download_input.rs
info:
  program: deadline
  args:
    - job
    - download-input
    - "--farm-id"
    - farm-0123456789abcdef0123456789abcdef
    - "--queue-id"
    - queue-0123456789abcdef0123456789abcdef
    - "--job-id"
    - job-0123456789abcdef0123456789abcdef
    - "--include"
    - "*.nonexistent"
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61999"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61999"
    AWS_ENDPOINT_URL_S3: "http://localhost:61999"
    AWS_ENDPOINT_URL_STS: "http://localhost:61999"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpjISXZg/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpjISXZg
---
success: true
exit_code: 0
----- stdout -----
Downloading input for Job 'Render Job'
No input files match the provided filters.

----- stderr -----
